Projects/myapp/instvote-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: instavote-svc
spec:
  selector:
     tier: dev
  ports: 
     - port: 80
       targetPort: 80
  type: NodePort
