Projects/myapp/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
         matchLabels:
           project: instavote
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
           project: instavote
